--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ requires-python = "^3.11"
 dependencies = [
     "fastapi[standard] (>=0.128.0,<0.129.0)",
     "pydantic (>=2.12.5,<3.0.0)",
-    "mortier @ file:/mortier"
+    "mortier @ file:///mortier"
 ]
 
 
